--- a/FaceBookProject/Views/_ViewImports.cshtml
+++ b/FaceBookProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FaceBookProject
 @using FaceBookProject.Models
+@using FaceBookProject.ViewModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
