--- a/FaceBookProject/Views/_ViewImports.cshtml
+++ b/FaceBookProject/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using FaceBookProject
 @using FaceBookProject.Models
 @using FaceBookProject.ViewModels.Account
+@using FaceBookProject.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
