--- a/FaceBookProject/Views/Account/CompleteRegister.cshtml
+++ b/FaceBookProject/Views/Account/CompleteRegister.cshtml
@@ -7,7 +7,12 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c372b7f0bf.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/assets/css/style.css" />
     <title>CompleteRegister</title>
 </head>
 <body>
