--- a/FaceBookProject/Views/Home/Index.cshtml
+++ b/FaceBookProject/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HomeVM
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -168,6 +169,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-3 d-none d-lg-block" style="max-height: 100vh; overflow-y: auto;">
                 <ul id="sponsor" class="">
                     <li>
@@ -178,6 +180,21 @@
 
                 <ul id="friends" class="list-group px-0 ">
                     <h4 class="text-muted my-3">Kisiler</h4>
+                    @*@foreach (var userFriend in Model.User.UserFriends)
+                    {
+                        <li class="list-group-item bg-transparent p-0 border-0">
+                            <a href="" class="option rounded d-flex align-items-center px-2 py-3">
+                                <div class="position-relative">
+                                    <img src="~/assets/img/chicken.jpg" width="40" height="40" class="rounded-circle"
+                                         alt="">
+                                    <span class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle">
+                                        <span class="visually-hidden">New alerts</span>
+                                    </span>
+                                </div>
+                                <h6 class="text-white mx-2">@userFriend.Friend.</h6>
+                            </a>
+                        </li>
+                    }*@
                     <li class="list-group-item bg-transparent p-0 border-0">
                         <a href="" class="option rounded d-flex align-items-center px-2 py-3">
                             <div class="position-relative">
@@ -185,7 +202,7 @@
                                      alt="">
                                 <span class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle">
                                     <span class="visually-hidden">New alerts</span>
-                                    </span>
+                                </span>
                             </div>
                             <h6 class="text-white mx-2">Xaqani Xaliqov</h6>
                         </a>
@@ -198,7 +215,7 @@
                                 <span class="last-seen position-absolute bottom-0 badge rounded-pill bg-dark text-success p-1">
                                     11s
                                     <span class="visually-hidden">unread messages</span>
-                                    </span>
+                                </span>
                             </div>
                             <h6 class="text-white mx-2">Huseynaga Huseynzade</h6>
                         </a>
