--- a/FaceBookProject/wwwroot/assets/scss/style.scss
+++ b/FaceBookProject/wwwroot/assets/scss/style.scss
@@ -17,8 +17,17 @@ header {
 
     input {
         background-color: #3a3b3c;
+
         &:focus {
             background-color: #3a3b3c;
+            box-shadow: none;
+            border: none;
+            color: white;
+        }
+    }
+
+    button {
+        &:focus {
             box-shadow: none;
             border: none;
         }
