--- a/FaceBookProject/Views/Shared/Components/Header/Default.cshtml
+++ b/FaceBookProject/Views/Shared/Components/Header/Default.cshtml
@@ -47,9 +47,9 @@
                 <ul class="d-flex align-items-center justify-content-end m-0">
                     <li class="user d-none d-xl-block">
                         <a href="" class="d-flex align-items-center">
-                            <img src="~/assets/img/1.jpg" class="overflow-hidden rounded-circle" alt="avatar"
-                                 width="30" height="30">
-                            <h5 class="text-white my-0 mx-2">Cavid</h5>
+                            <img src="~/assets/img/@Model.User.Profile" class="overflow-hidden rounded-circle" alt="avatar"
+                                 width="30" height="30" />
+                            <h5 class="text-white my-0 mx-2">@Model.User.UserName</h5>
                         </a>
                     </li>
                     <li class="menu-icon mx-2">
