--- a/FaceBookProject/Views/Home/SearchUser.cshtml
+++ b/FaceBookProject/Views/Home/SearchUser.cshtml
@@ -9,9 +9,9 @@
             <div class="row">
                 @foreach (var user in Model.AllUsers)
                 {
-                    <div class="col-6 offset-3 bg-white rounded d-flex align-items-center justify-content-between px-4 py-3">
-                        <div class="d-flex align-items-center">
-                            <img src="~/assets/img/1.jpg" width="100" height="100" class="rounded-circle" alt="profile" />
+                    <div class="col-6 offset-3 bg-white rounded position-relative px-4 py-3 my-2">
+                        <div class="d-flex align-items-center w-100">
+                            <img src="~/assets/img/@user.Profile" width="100" height="100" class="rounded-circle" alt="profile" />
                             <div class="mx-3">
                                 <a href="" class="text-dark">@user.FirstName @user.LastName</a>
                                 <p class="text-muted">Arkadas</p>
@@ -19,11 +19,42 @@
                                 <p class="text-muted mb-0">KEF ELE .SIRKETI'da FSO</p>
                             </div>
                         </div>
-                        <a href="" class="btn btn-secondary p-3 rounded-circle">
-                            <i class="fas fa-user-plus"></i>
+
+                        @if (Model.User.Friends.Count(u => u.Friend.Id == user.Id) == 0)
+                        {
+                            @if (user.Suggests.Exists(s => s.SenderId == Model.User.Id))
+                            {
+                                <div class="user-alert mx-4">
+                                    <p class="bg-primary text-white py-2 px-3 rounded">Istek gonderildi <i class="fas fa-check"></i></p>
+                                </div>
+                            }
+                            else if (Model.User.Suggests.Count == 0 || !Model.User.Suggests.Exists(s => s.SenderId == user.Id))
+                            {
+                                <div class="user-alert mx-4">
+                                    <a id="sendSuggest" data-id="@user.Id" class="btn btn-secondary p-2 rounded-circle">
+                                        <i class="fas fa-user-plus"></i>
+                                    </a>
+                                </div>
+                            }
+
+                            else
+                            {
+                                <div class="user-alert mx-4">
+                                    <a id="accept" data-id="@user.Id" class="btn px-4 me-2 btn-primary">Onayla</a>
+                                    <a id="regret" data-id="@user.Id" class="btn px-4 ms-2 btn-secondary">Sil</a>
+                                </div>
+                            }
+                        }
+                        else
+                        {
+                    <div class="user-alert mx-4">
+                        <a data-id="@user.Id" class="btn btn-secondary p-2 rounded-circle">
+                            <i class="fab fa-facebook-messenger"></i>
                         </a>
                     </div>
+                        }
 
+                    </div>
                 }
             </div>
         </div>
