--- a/FaceBookProject/Views/Shared/_Layout.cshtml
+++ b/FaceBookProject/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-dark">
-   
+
     @await Component.InvokeAsync("Header")
 
     <main>
@@ -80,7 +80,8 @@
         </ul>
 
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="~/assets/js/main.js"></script>
 </body>
 
