--- a/FaceBookProject/Views/Home/Index.cshtml
+++ b/FaceBookProject/Views/Home/Index.cshtml
@@ -191,7 +191,7 @@
                                     </div>
                                     <div class="d-flex w-100">
                                         <a id="accept" data-id="@suggest.Sender.Id" class="btn px-4 me-2 btn-primary">Onayla</a>
-                                        <a id="accept" data-id="@suggest.Sender.Id" class="btn px-4 ms-2 btn-secondary">Sil</a>
+                                        <a id="regret" data-id="@suggest.Sender.Id" class="btn px-4 ms-2 btn-secondary">Sil</a>
                                     </div>
                                 </div>
                             </div>
