--- a/FaceBookProject/Views/Shared/_Layout.cshtml
+++ b/FaceBookProject/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c372b7f0bf.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/assets/css/style.css" />
+    <link rel="stylesheet" href="~/assets/css/main.css" />
     <title>Facebook</title>
 </head>
 
@@ -19,67 +19,8 @@
         @RenderBody()
     </main>
 
-    <div class="chat">
-        <div class="chat-header">
-            <a href="" class="chat-header__profile p-2 text-white">
-                <img src="~/assets/img/avatar.jpg" width="30" height="30" class="rounded-circle" alt="chat" />
-                <p class="mx-2 mb-0">Xaqani Xaliqov</p>
-                <i class="fas fa-caret-down"></i>
-            </a>
-
-            <ul class="chat-header__operations p-2 mb-0">
-                <li><a href="" class="text-muted"><i class="fas fa-video"></i></a></li>
-                <li><a href="" class="text-muted"><i class="fas fa-phone-alt"></i></a></li>
-                <li><a href="" class="text-muted"><i class="fas fa-minus"></i></a></li>
-                <li><a href="" id="close" class="text-muted"><i class="fas fa-times"></i></a></li>
-            </ul>
-        </div>
-        <div class="chat-body">
-            <div class="chat-body__info">
-                <img src="~/assets/img/avatar.jpg" width="50" height="50" class="rounded-circle" alt="profile" />
-                <h6 class="text-white my-2">Xaqani Xaliqov</h6>
-                <small class="text-muted">Facebook</small>
-                <small class="text-muted">Facebook'ta arkadassiniz</small>
-                <small class="text-muted">Akra, Gana'da yaşıyor</small>
-            </div>
-
-            <div class="message-come d-flex">
-                <img src="~/assets/img/avatar.jpg" width="30" height="30" class="rounded-circle mx-2" alt="profile" />
-                <p class="message">Salam</p>
-            </div>
-
-            <div class="message-come">
-                <img src="~/assets/img/avatar.jpg" width="30" height="30" class="rounded-circle mx-2" alt="profile" />
-                <p class="message">Salam Necesen Okus ? max-width: 200px; </p>
-            </div>
-
-            <div class="message-come">
-                <img src="~/assets/img/avatar.jpg" width="30" height="30" class="rounded-circle mx-2" alt="profile" />
-                <p class="message">Salam Necesen Okus ?</p>
-            </div>
-
-            <div class="message-sent">
-                <p class="message">
-                    Salam Necesen Okus ?Salam Necesen Okus ? Salam Necesen Okus ? Salam Necesen Okus ?
-                </p>
-            </div>
-        </div>
-        <ul class="chat-footer">
-            <!-- <li><a href="" class="text-muted"><i class="fas fa-plus-circle"></i></a></li> -->
-            <li><a href=""><i class="fas fa-file-image"></i></a></li>
-            <li><a href="" id=""><i class="fas fa-snowman"></i></a></li>
-            <li>
-                <p class="textarea d-flex align-items-end">
-                    <span role="textbox" contenteditable></span>
-                </p>
-            </li>
-            <li>
-                <a href="" id="emoji"><i class="fas fa-smile"></i></a>
-            </li>
-            <li><a href="" id="send"><i class="far fa-paper-plane"></i></a></li>
-        </ul>
-
-    </div>
+    @await Component.InvokeAsync("Chat")
+   
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="~/assets/js/main.js"></script>
