--- a/FaceBookProject/Views/Home/Index.cshtml
+++ b/FaceBookProject/Views/Home/Index.cshtml
@@ -204,7 +204,7 @@
                     @foreach (var friend in Model.User.Friends)
                     {
                         <li class="list-group-item bg-transparent p-0 border-0">
-                            <a data-id="@friend.Friend.Id" class="btn option rounded d-flex align-items-center px-2 py-3">
+                            <a id="openChat" data-id="@friend.Friend.Id" class="btn option rounded d-flex align-items-center px-2 py-3">
                                 <div class="position-relative">
                                     <img src="~/assets/img/@friend.Friend.Profile" width="40" height="40" class="rounded-circle"
                                          alt="">
