--- a/FaceBookProject/Views/Home/Index.cshtml
+++ b/FaceBookProject/Views/Home/Index.cshtml
@@ -183,7 +183,7 @@
                     {
                         <li>
                             <div class="d-flex">
-                                <img src="~/assets/img/@suggest.Sender.Profile" width="75" height="75" class="rounded-circle" alt="profile" />
+                                <img src="~/assets/img/@suggest.Sender.Albums.FirstOrDefault(a=>a.Name == "Profile").Images.FirstOrDefault(i=>i.IsProfilePhoto).Picture" width="75" height="75" class="rounded-circle" alt="profile" />
                                 <div class="mx-2 w-100">
                                     <div class="d-flex justify-content-between w-100">
                                         <p class="text-white">@suggest.Sender.FirstName @suggest.Sender.LastName</p>
@@ -206,7 +206,7 @@
                         <li class="list-group-item bg-transparent p-0 border-0">
                             <a id="openChat" data-id="@friend.Friend.Id" class="btn option rounded d-flex align-items-center px-2 py-3">
                                 <div class="position-relative">
-                                    <img src="~/assets/img/@friend.Friend.Profile" width="40" height="40" class="rounded-circle"
+                                    <img src="~/assets/img/@friend.Friend.Albums.FirstOrDefault(a=>a.Name == "Profile").Images.FirstOrDefault(i=>i.IsProfilePhoto).Picture" width="40" height="40" class="rounded-circle"
                                          alt="">
                                     <span class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle">
                                         <span class="visually-hidden">New alerts</span>
